# gitignore-filter

./: CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: commit-lint.yml  release.yml
examples/: basic_usage.py  custom_patterns.py
src/gitignore_filter/: __init__.py  core.py  logging.py
src/gitignore_filter/config/: __init__.py  git.py
src/gitignore_filter/patterns/: __init__.py  base.py  pathspec.py
src/gitignore_filter/scanner/: __init__.py  base.py  fs.py  ignore.py  worker.py
src/gitignore_filter/utils/: __init__.py  cache.py  path.py  pathspec_util.py
tests/: conftest.py  test_core.py  test_deep_directory_structure.py  test_logging.py
tests/config/: test_git.py
tests/patterns/: test_base.py  test_pathspec.py
tests/scanner/: test_base.py  test_fs.py  test_ignore.py  test_worker.py
tests/utils/: test_cache.py  test_path.py  test_pathspec_util.py
