[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "gitignore-filter"
version = "0.2.3"
authors = [
    { name = "Yoshikazu Kawataki", email = "y.kawataki@gmail.com" },
]
description = "A Python library for .gitignore pattern filtering"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pathspec>=0.12.1, <1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/gitignore_filter",
]

[tool.black]
line-length = 100
target-version = [
    "py38",
]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "I",
]
ignore = []
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-v --cov=gitignore_filter --cov-report=term-missing"
